Added structure to html page and added css document

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   </style>
 </head>
 <body>
+  <img src="images/logo.svg" alt="logo">
 
-  Build The Community Your Fans Will Love
+  <img src="images/illustration-mockups.svg" alt="Main picture">
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <h1>Build The Community Your Fans Will Love</h1>
 
-  Register
+  <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+  Create connections with your users as you engage in genuine discussion.</p> 
+
+  <button>Register</button>
 
   <footer>
     <p class="attribution">
