--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -15,9 +17,9 @@
   </style>
 </head>
 <body>
-  <img src="images/logo.svg" alt="logo">
+  <img class="logo" src="images/logo.svg" alt="logo">
 
-  <img src="images/illustration-mockups.svg" alt="Main picture">
+  <img class="main-img" src="images/illustration-mockups.svg" alt="Main picture">
 
   <h1>Build The Community Your Fans Will Love</h1>
 
